--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 
                 <div class="container container-article">
                     <h2>My world</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis facilis quas dolorem veritatis expedita dolore explicabo voluptas, quaerat cum quos autem itaque inventore? Ad et voluptates reprehenderit molestiae, quam distinctio? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad et voluptates reprehenderit molestiae, quam distinctio? </p>
-                    <a href="#" class="more-info">Continue reading</a>
+                    <p>Cześć! To jest mój blog podróżniczy, gdzie opisuję swoje przygody. Zapraszam do czytania! </p>
+                    <a href="#" class="more-info">Czytaj dalej</a>
                 </div>
 
                 <div class="author"><a href="https://unsplash.com/@dariuszsankowski?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank"><i class="icon-adult"></i></a></div>
@@ -61,8 +61,8 @@
                     </div>
 
                     <div class="content">
-                        <h3>Norway</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quidem impedit enim. Fuga aspernatur, labore saepe quos nemo sunt fugit, non in aliquam id quaerat facere dolores est dolore. Necessitatibus? Fuga aspernatur, labore saepe quos nemo sunt fugit, non in aliquam id quaerat facere dolores est dolore. Necessitatibus?</p>
+                        <h3>Norwegia</h3>
+                        <p>Norwegia, urzędowo Królestwo Norwegii – państwo w Europie Północnej będące monarchią konstytucyjną, którego terytorium obejmuje zachodnią i północną część Półwyspu Skandynawskiego, Jan Mayen, Svalbard, Wyspę Bouveta i Lofoty. Ma łączną powierzchnię 385 207 km² i liczy 5 367 580 mieszkańców (2015). Graniczy ze Szwecją, Finlandią i Rosją. Kraj ma również granicę morską (przez cieśninę Skagerrak) z Danią. Stolicą Norwegii jest Oslo. Długa, licząca ponad 20 tys. kilometrów linia brzegowa znana jest z charakterystycznych zatok, tzw. fiordów. Nazwa kraju pochodzi od staronordyckiego nord vegen (pol. droga na północ).</p>
                         <a href="#" class="more-info">Continue reading</a>
                     </div>
 
@@ -76,9 +76,9 @@
                     </div>
                     
                     <div class="content">
-                        <h3>Iceland</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quidem impedit enim. Fuga aspernatur, labore saepe quos nemo sunt fugit, non in aliquam id quaerat facere dolores est dolore. Necessitatibus? Fuga aspernatur, labore saepe quos nemo sunt fugit, non in aliquam id quaerat facere dolores est dolore. Necessitatibus?</p>
-                        <a href="#" class="more-info">Continue reading</a>
+                        <h3>Islandia</h3>
+                        <p>Islandia – nordyckie państwo położone na północy Grzbietu Śródatlantyckiego, na wyspie Islandia i kilku mniejszych wyspach, m.in. archipelagu Vestmannaeyjar w północnej części Oceanu Atlantyckiego. Stolicą państwa i największym miastem jest Reykjavík, w którym mieszka około 36% z 380 000 mieszkańców kraju. Islandia jest kulturowo i politycznie powiązana z Europą. Językiem urzędowym kraju jest język islandzki.</p>
+                        <a href="#" class="more-info">Czytaj dalej</a>
                     </div>
 
                 </section>
@@ -92,9 +92,9 @@
                     </div>
 
                     <div class="content">
-                        <h3>Behind the curtain</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quidem impedit enim. Fuga aspernatur, labore saepe quos nemo sunt fugit, non in aliquam id quaerat facere dolores est dolore. Necessitatibus? Fuga aspernatur, labore saepe quos nemo sunt fugit, non in aliquam id quaerat facere dolores est dolore. Necessitatibus?</p>
-                        <a href="#" class="more-info">Continue reading</a>
+                        <h3>Australia</h3>
+                        <p>Australia, formalnie Związek Australijski – państwo demokratyczne, położone na półkuli południowej, obejmujące kontynent Australia, wyspę Tasmanię i inne znacznie mniejsze wyspy na Oceanach Indyjskim i Spokojnym. Stolicą kraju jest Canberra, największym miastem jest Sydney.</p>
+                        <a href="#" class="more-info">Czytaj dalej</a>
                     </div>
 
                 </section>
@@ -103,9 +103,9 @@
             <article class="article about" id="about">
 
                 <div class="container container-article">
-                    <h2>About me</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis facilis quas dolorem veritatis expedita dolore explicabo voluptas, quaerat cum quos autem itaque inventore? Ad et voluptates reprehenderit molestiae, quam distinctio? Orel eritatis expedita dolore explicabo voluptas, quaerat cum quos autem itaque inventore? Ad et voluptates reprehenderit</p>
-                    <a href="#" class="more-info">Continue reading</a>
+                    <h2>O mnie</h2>
+                    <p>Podróżuję, opisuję i przedstawiam. To jest mój blog podróżniczy, gdzie opisuję swoje przygody. Zapraszam do czytania! </p>
+                    <a href="#" class="more-info">Czytaj dalej</a>
                 </div>
 
                 <img src="./img/about.jpg" alt="woman standing on the road against the backdrop of mountains" class="about-img">
