--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
                     <div class="content">
                         <h3>Australia</h3>
-                        <p>Australia, formalnie Związek Australijski – państwo demokratyczne, położone na półkuli południowej, obejmujące kontynent Australia, wyspę Tasmanię i inne znacznie mniejsze wyspy na Oceanach Indyjskim i Spokojnym. Stolicą kraju jest Canberra, największym miastem jest Sydney.</p>
+                        <p>Australia, formalnie Związek Australijski – państwo demokratyczne, położone na półkuli południowej, obejmujące kontynent Australia, wyspę Tasmanię i inne znacznie mniejsze wyspy na Oceanach Indyjskim i Spokojnym. Stolicą kraju jest Canberra, największym miastem jest Sydney. Nazwa Australia, odnosząca się do kontynentu, pochodzi od określenia Terra Australis, czyli Ziemia Południowa po łacinie. W dawnej Europie wierzono, że na półkuli południowej znajduje się naprawdę duży kontynent. Ostatecznie nazwa przypadła o wiele mniejszemu, niż zakładano.</p>
                         <a href="#" class="more-info">Czytaj dalej</a>
                     </div>
 
