--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <div class="content">
                         <h3>Norwegia</h3>
                         <p>Norwegia, urzędowo Królestwo Norwegii – państwo w Europie Północnej będące monarchią konstytucyjną, którego terytorium obejmuje zachodnią i północną część Półwyspu Skandynawskiego, Jan Mayen, Svalbard, Wyspę Bouveta i Lofoty. Ma łączną powierzchnię 385 207 km² i liczy 5 367 580 mieszkańców (2015). Graniczy ze Szwecją, Finlandią i Rosją. Kraj ma również granicę morską (przez cieśninę Skagerrak) z Danią. Stolicą Norwegii jest Oslo. Długa, licząca ponad 20 tys. kilometrów linia brzegowa znana jest z charakterystycznych zatok, tzw. fiordów. Nazwa kraju pochodzi od staronordyckiego nord vegen (pol. droga na północ).</p>
-                        <a href="#" class="more-info">Continue reading</a>
+                        <a href="#" class="more-info">Czytaj dalej</a>
                     </div>
 
                 </section>
